sort.basic.cocktail.AlgCocktailSort2.scala.error
Compilation error:
AlgCocktailSort2:28: error: value =+ is not a member of Int
      i=+1
       ^